k8s/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: REPO_NAME
spec:
  selector:
    environment: prod
