k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: REPO_NAME-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: api.noterm.app
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: REPO_NAME
            port:
              number: 80
